2007-08-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-03
	* migrate streams
	* make Configuration.insert* more robust against invalid template
	names

2007-08-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-02
	* fix sql queries for 'fast' loading of templates (restricted to
	the ones referenced in the configuration to be converted).
	* confdb.converter.Converter fixed, takes two parameters now:
	configId *and* the index of the database setup in the ConfDBSetups
	class (1=HLT Dev, 2=OMDS)
	* pick up latest parser fixes
	* pick up latest browser fixes
	
2007-08-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-01
	* pick up latest converter / browser developments from Ulf
	* gui bugfixes
	* add ability to sort components, disabled for now and *not* yet
	reflected in the db schema!
	* fixed typo in confdb.properties: it is OMDS, not ODMS:)

2007-08-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-00
	* data: add stream support
	* db/sql: add releaseId, creator to table
	'Configurations'; remove table 'ConfigurationReleaseAssoc'; add
	tables 'Streams' and 'StreamPathAssoc; Oracle specific performance
	improvements (regarding indices / primary keys).
	* gui: The configuration panel contains a new tab, 'Streams',
	which brings up a tree view of the defined streams and the
	assigned paths and allows to manipulate them
	* the int2r hlt development schema was updated and is now only
	compatible with this version (and later)!
	
2007-08-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-01
	* rename confdb.db.CfgDatabase -> confdb.db.ConfDB
	* add confdb.db.ConfDBSetups, a property-file initialized
	repository of default db connections
	* confdb.gui.CfgMenuBar -> confdb.gui.ConfDBMenuBar, disable menu
	bar commands when they are not available
	
2007-08-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-00